--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/project-name"
+# Database
+DATABASE_NAME=project-name
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=postgres
+DATABASE_PASSWORD=password
+
+DOCKER_LOCAL_VOLUME_PATH=./local-storage/pgdata
 
 # Example:
 # SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
